--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,12 +5,7 @@ name: Mpltoolbox
 
 on:
   push:
-    branches:
-      - main
-    # tags:
-    #   - '*'
-  pull_request:
-    branches:
+    tags:
       - '*'
 
 jobs:
@@ -46,12 +41,23 @@ jobs:
     #     python -m pytest test
     - name: Build documentation
       run: |
-        sphinx-build -b html docs/. docs/build
+        sphinx-build -b html docs/. docs/html
     - name: Archive documentation artifacts
       uses: actions/upload-artifact@v3
       with:
         name: DocumentationHTML
-        path: docs/build
+        path: docs/html
+
+    - name: Upload release assets
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: docs/html.zip
+        asset_name: Documentation
+        tag: ${{ github.ref }}
+        overwrite: true
+
+
     # - name: Build a binary wheel and a source tarball
     #   if: startsWith(github.ref, 'refs/tags')
     #   run: |
