--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: docs_html.zip
+        file: target/release/docs_html.zip
         asset_name: Documentation
         tag: ${{ github.ref }}
         overwrite: true
